--- a/index.html
+++ b/index.html
@@ -167,7 +167,21 @@
 
     <a id="fotos" class="in-page-link"></a>
 
+    <section class="details details-2 overlay parallax">
+        <div class="background-image-holder fadeIn"
+             style="background: 50% 50%;">
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <h2><a style="color: white;text-decoration: underline" href="https://goo.gl/photos/PmUDtZpbmYG8ofC38">Únete al álbum de fotos!</a></h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="story short-story">
+
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 text-center">
@@ -180,7 +194,7 @@
                                 <img alt="Image" src="images/antigua.jpg">
                             </li>
                             <!--<li class="flex-active-slide">-->
-                                <!--<img alt="Image" src="images/invitacion.jpg">-->
+                            <!--<img alt="Image" src="images/invitacion.jpg">-->
                             <!--</li>-->
                             <li class="flex-active-slide">
                                 <img alt="Image" src="images/recepcion0.jpg">
